chrome issue with images on mobile

--- a/app/assets/stylesheets/responsive/_576.scss
+++ b/app/assets/stylesheets/responsive/_576.scss
@@ -8,6 +8,10 @@
       &.cf-philo-row__image {
         height: auto;
         padding: 0 2em;
+
+        img {
+          height: auto;
+        }
       }
     }
   }
